# MyEngine

./: .clangd  .gitignore  CMakeLists.txt  run_debug.sh  run_release.sh
include/: core_app.h  helpers.h  pipelinesetup.h  sdlwindow.h
shaders/: ps_shader.hlsl  vs_shader.hlsl
src/: core_app.c  helpers.c  maininstance.c  pipelinesetup.c  sdlwindow.c
